# ccs-spend-forecasting-app

./: .gitignore  .pylintrc  Makefile  README.md  config.ini.template  demo_model_comparison_with_SARIMA.ipynb  logging.conf  pipeline.py  pyproject.toml  utils.py
.github/workflows/: automated-checks.yml  push-to-azure.yml
data_factory/dataset/: DestinationDataset_0hl.json  DestinationDataset_2gm.json  DestinationDataset_3lm.json  SourceDataset_0hl.json  SourceDataset_2gm.json  SourceDataset_3lm.json
data_factory/factory/: Development-ccs-import-factory.json
data_factory/linkedService/: AzureBlobStorage1.json  Development-sql-connection.json  Development-storage-connection.json
data_factory/pipeline/: CopyPipeline_0hl.json  CopyPipeline_2gm.json  CopyPipeline_3lm.json
databricks/: utils.py
eda/: data_analysis.py
pipeline/: main.py  utils.py
pipeline/jobs/: arima_model.py  arma_model.py  fill_missing_months.py  forecast_model.py  get_active_combinations.py  mock_forecast.py  model_utils.py  models_comparison.py  prophet_model.py  run_forecast_and_output_to_blob.py  run_sarima_model.py  sarima_model.py  save_as_csv_for_powerbi.py
pipeline/models/: arima_model.py  arma_model.py  forecast_model.py  mock_forecast.py  prophet_model.py  sarima_model.py
test/: base_test.py  conftest.py  fill_missing_months_test.py  get_active_combinations_test.py  mock_forecast_test.py  models_comparison_test.py  pipeline_test.py  prophet_model_test.py  sample_test.py  sarima_model_test.py  utils_test.py
